WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269523
AX: aria-hidden=true should be ignored on the body and html elements
https://bugs.webkit.org/show_bug.cgi?id=269523
Summary
AX: aria-hidden=true should be ignored on the body and html elements
Scott
Reported
2024-02-15 16:19:19 PST
The ARIA spec is updating with a new requirement where user agents must ignore the aria-hidden=true attribute when used on the HTML or BODY element of a web page. The specific text: To prevent authors erroneously hiding entire window-rendered documents only to those using assistive technology, user agents MUST NOT expose the hidden state to assistive technologies if it is specified on the root element or the host language element that represents the contents of the primary document in view. For instance, the html or body elements in an HTML document, or the root svg element if it is rendered as its own primary document in the browser window. If authors were to specify aria-hidden="true" on the opening tag for an embedded document, for instance on a math or svg embedded within an HTML document, user agents would still be expected to hide these elements from assistive technologies. A basic test case, such as, would result in no ignored elements, as the aria-hidden=true on the html element would be ignored. <html lang=en aria-hidden=true> <h1>hello world</h1> <p>my content</p> <a href=#>a hyperlink</a> </html> ARIA PR 1880 -
https://github.com/w3c/aria/pull/1880
Attachments
Patch
(11.98 KB, patch)
2024-04-12 17:45 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(11.98 KB, patch)
2024-04-17 11:42 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-15 16:19:33 PST
<
rdar://problem/123049663
>
Tyler Wilcock
Comment 2
2024-04-12 17:45:19 PDT
Created
attachment 470908
[details]
Patch
chris fleizach
Comment 3
2024-04-14 06:22:58 PDT
Comment on
attachment 470908
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470908&action=review
> Source/WebCore/accessibility/AccessibilityObject.cpp:3995 > + if (tag == bodyTag || tag == htmlTag || (tag == SVGNames::svgTag && !element->parentNode()))
Is frame and iframe still ok to hide?
chris fleizach
Comment 4
2024-04-14 06:23:54 PDT
Comment on
attachment 470908
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470908&action=review
> Source/WebCore/accessibility/AccessibilityObject.cpp:3995 > + if (tag == bodyTag || tag == htmlTag || (tag == SVGNames::svgTag && !element->parentNode()))
Is frame and iframe still ok to hide?
Jonathan Bedard
Comment 5
2024-04-15 16:58:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27294
Jonathan Bedard
Comment 6
2024-04-15 16:59:39 PDT
Sending through EWS as a PR so that we can avoid the patch application bug plaguing GTK and WPE ports, for the moment.
Jonathan Bedard
Comment 7
2024-04-16 07:45:47 PDT
Passed GTK and WPE tests in
https://github.com/WebKit/WebKit/pull/27294
, landing!
Tyler Wilcock
Comment 8
2024-04-17 11:42:24 PDT
Created
attachment 470965
[details]
Patch
Tyler Wilcock
Comment 9
2024-04-18 07:58:14 PDT
(In reply to chris fleizach from
comment #4
)
> Comment on
attachment 470908
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=470908&action=review
> > > Source/WebCore/accessibility/AccessibilityObject.cpp:3995 > > + if (tag == bodyTag || tag == htmlTag || (tag == SVGNames::svgTag && !element->parentNode())) > > Is frame and iframe still ok to hide?
It's possible we'll want to apply this heuristic to iframe and frame, but that would require more exploration (Are developers making this mistake on these elements too? Are there more legitimate use cases for aria-hidden on frame / iframe than body / html / root SVGs?)
EWS
Comment 10
2024-04-18 08:57:50 PDT
Committed
277677@main
(873f5404e780): <
https://commits.webkit.org/277677@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470965
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug