AX: aria-hidden=true should be ignored on the body and html elements https://bugs.webkit.org/show_bug.cgi?id=269523 rdar://123049663

Reviewed by Chris Fleizach.

To prevent authors from hiding all content from assistive technologies, aria-hidden should not be respected on document
root elements (`html`, `body`, or top-level `svg`s).

https://github.com/w3c/aria/pull/1880

* LayoutTests/accessibility/body-element-aria-hidden-expected.txt: Added.
* LayoutTests/accessibility/body-element-aria-hidden.html: Added.
* LayoutTests/accessibility/html-element-aria-hidden-expected.txt: Added.
* LayoutTests/accessibility/html-element-aria-hidden.html: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new tests.
* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isARIAHidden const):
(WebCore::AccessibilityObject::tagName const):
(WebCore::AccessibilityObject::setIsIgnoredFromParentDataForChild):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::AccessibilityObjectAtspi::attributes const):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::tagName const): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h: