Source/WebCore/accessibility/AXCoreObject.h
@@ -1272,7 +1272,6 @@ public:
     bool isAncestorOfObject(const AXCoreObject*) const;
 
     virtual String nameAttribute() const = 0;
-    virtual AtomString tagName() const = 0;
 
     virtual std::optional<SimpleRange> simpleRange() const = 0;
     virtual VisiblePositionRange visiblePositionRange() const = 0;
